[gd_scene load_steps=6 format=3 uid="uid://b47y3nfinjcsp"]

[ext_resource type="Script" path="res://scenes/computer_scene.gd" id="1_l5y6j"]
[ext_resource type="Texture2D" uid="uid://c6dp6t3eqj3bs" path="res://assets/pc thing/pc_main_screen.png" id="2_nlfvp"]
[ext_resource type="Texture2D" uid="uid://2le8hkajk5b5" path="res://assets/pc thing/slots_icon.png" id="3_5p0j4"]
[ext_resource type="Texture2D" uid="uid://cwt1hsix3rxcm" path="res://assets/pc thing/button_dice.png" id="3_l3tiw"]
[ext_resource type="Texture2D" uid="uid://bbanyvk2kf4op" path="res://assets/pc thing/blackjack_icon.png" id="3_xermn"]

[node name="ComputerScene" type="Node2D"]
z_index = 20
script = ExtResource("1_l5y6j")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="pcBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_nlfvp")

[node name="Buttons" type="Node2D" parent="."]

[node name="SlotsButton" type="Button" parent="Buttons"]
offset_left = -384.0
offset_top = 64.0
offset_right = -312.0
offset_bottom = 136.0
pivot_offset = Vector2(36, 36)
icon = ExtResource("3_5p0j4")
flat = true

[node name="BlackjackButton" type="Button" parent="Buttons"]
offset_left = -384.0
offset_top = -72.0
offset_right = -312.0
pivot_offset = Vector2(36, 36)
icon = ExtResource("3_xermn")
flat = true

[node name="BarbutButton" type="Button" parent="Buttons"]
offset_left = -384.0
offset_top = -192.0
offset_right = -312.0
offset_bottom = -120.0
pivot_offset = Vector2(36, 36)
icon = ExtResource("3_l3tiw")
flat = true

[connection signal="gui_input" from="Buttons/SlotsButton" to="." method="_onClickSlots"]
[connection signal="mouse_entered" from="Buttons/SlotsButton" to="." method="_onMouseHover"]
[connection signal="mouse_exited" from="Buttons/SlotsButton" to="." method="_onMouseUnhover"]
[connection signal="gui_input" from="Buttons/BlackjackButton" to="." method="_onClickBlackjack"]
[connection signal="mouse_entered" from="Buttons/BlackjackButton" to="." method="_onHoverBlackjack"]
[connection signal="mouse_exited" from="Buttons/BlackjackButton" to="." method="_onUnhoverBlackjack"]
[connection signal="gui_input" from="Buttons/BarbutButton" to="." method="_onPressBarbutButton"]
[connection signal="mouse_entered" from="Buttons/BarbutButton" to="." method="_onMouseEnteredBarbut"]
[connection signal="mouse_exited" from="Buttons/BarbutButton" to="." method="_onMouseExitBarbut"]
